# atoms

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: report.md
outputs/default_run/: summary.json
src/atoms/: __init__.py  config.py  physics.py  plotting.py  simulate.py  speed_scan.py  trajectory.py
tests/: test_atoms.py
