[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atoms"
version = "0.1.0"
description = "Semiclassical neutral atom shuttling simulator for optical tweezers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.10",
  "numba>=0.65",
  "numpy>=2.2",
  "scipy>=1.15",
]

[project.scripts]
atoms-sim = "atoms.simulate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atoms"]
